FIPS: Enable Fips conditionally